# ag-cli

./: .env.template  .gitignore  README.md  pyproject.toml
ag_cli/: __init__.py  api_client.py  config.py  main.py
ag_cli/chat/: history_manager.py
ag_cli/cli/: commands.py
scripts/: install.py
src/: api_client.py  config.py  main.py
src/ag-cli/: api_client.py  app.py  config.py  main.py  output_manager.py  stream_processor.py
src/ag_cli/: __main__.py  api_client.py  config.py  main.py
src/ag_cli/chat/: history_manager.py  input_handler.py  interface.py
src/ag_cli/cli/: commands.py
src/ag_cli/utils/: models.py
src/chat/: history_manager.py  interface.py
src/cli/: commands.py
src/utils/: models.py
