[project]
name = "ag-cli"
version = "0.1.0"
description = "agent-cli 多大语言模型命令行交互应用"
authors = [{ name = "qingzhixing", email = "qzsqqmail@qq.com" }]
dependencies = ["openai>=2.8.1", "python-dotenv>=1.2.1", "rich>=14.2.0"]
requires-python = "==3.14.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
ag = "python src/ag-cli/main.py"
