[project]
name = "ag-cli"
version = "0.1.0"
description = "agent-cli 多大语言模型命令行交互应用"
authors = [{ name = "qingzhixing", email = "qzsqqmail@qq.com" }]
dependencies = ["openai>=2.8.1", "rich>=14.2.0", "tenacity>=9.1.2"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = true

# 入口点配置 - 确保全局安装时ag命令可用
[project.scripts]
ag = "ag_cli.main:main"

# 简化的PDM脚本配置
[tool.pdm.scripts]
# 主命令
ag = "python -m ag_cli.main"

# 构建和安装相关脚本
install = { cmd = "python scripts/install.py", help = "安装项目" }
build = { cmd = "pdm build", help = "构建包" }
clean = { cmd = "rmdir /s /q dist build *.egg-info 2>nul || rm -rf dist build *.egg-info", help = "清理构建文件" }

# 开发测试脚本
ag-test-arg-single = "pdm ag 5line c++ solving a+b problem"
ag-test-arg-continues = "pdm ag -c 5line c++ solving a+b problem"
ag-test-inner = "pdm ag"

# 添加构建系统配置
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# 打包配置
[tool.pdm.build]
package-dir = "src"
includes = ["src/**/*.py", "README.md", "pyproject.toml"]
excludes = [
	"**/__pycache__/**",
	"**/*.pyc",
	"**/.pytest_cache/**",
	"**/.mypy_cache/**",
	"**/.ruff_cache/**",
	"**/.git/**",
	"*.env*",
]
